# machine_setups

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO  TODO_arch_setup_todos.txt  TODO_aur_itp  TODO_raspberry_setup  headless.yml  headless_setup.sh  main_machine.yml  packages_to_install.txt  packages_to_install_from_AUR.txt  pyproject.toml  renaming_some_files.py  rpi_backup_server.yml  rpi_setup.sh  run_setup_first_time.sh  setup_main_machine.sh  todo_family.md  tricks.md  ubuntu_changes.md
configs/desktop_env_specific/xfce/.config/autostart/: signal-desktop.desktop
configs/historical/home/: .bash_aliases  .bash_functions  .bashrc
configs/host_agnostic/: .ansible.cfg  .gitconfig  .npmrc  .pdbrc.py  .pypirc  .tmux.conf  .vimrc  .zprofile  .zshrc
configs/host_agnostic/.config/alacritty/: alacritty.toml  alacritty.yml
configs/host_agnostic/.config/autostart/: signal-desktop.desktop
configs/host_agnostic/.config/caffeine/: whitelist.txt
configs/host_agnostic/.config/freeplane/1.10.x/: auto.properties
configs/host_agnostic/.config/keepassxc/: keepassxc.ini
configs/host_agnostic/.config/keybase/: config.json
configs/host_agnostic/.config/kitty/: kitty.conf
configs/host_agnostic/.config/mpv/: mpv.conf
configs/host_agnostic/.config/nvim/: config.vim  init.lua  init.vim
configs/host_agnostic/.config/pgcli/: config
configs/host_agnostic/.config/ptpython/: config.py
configs/host_agnostic/.config/pudb/: pudb.cfg
configs/host_agnostic/.config/pypoetry/: config.toml
configs/host_agnostic/.config/qBittorrent/: qBittorrent.conf
configs/host_agnostic/.config/qt6ct/: qt6ct.conf
configs/host_agnostic/.config/ranger/: bookmarks  rc.conf  rifle.conf  scope.sh
configs/host_agnostic/.config/zsh/: aliases.zsh  functions.zsh  p10k.zsh
configs/host_agnostic/.local/etc/: anacrontab
configs/host_agnostic/.local/share/applications/: exodus_wallet.desktop
configs/host_agnostic/.ssh/: authorized_keys
configs/host_agnostic/.vim/: en.utf-8.add  en.utf-8.add.spl
configs/host_specific/alien/.config/alacritty/: machine-specific.yml
configs/host_specific/b-tv/.config/alacritty/: machine-specific.yml
configs/host_specific/bh/.config/alacritty/: machine-specific.yml
configs/manually_linked/: lightdm-gtk-greeter.conf  locale.conf  sshd_config
docs/: encrypted_btrfs_volume_from_two_drives.md  gnome_desktop.md  initial_setup.md  initial_setup_fixups.md  manjaro_installation.md  manjaro_tricks.md  package_notes.md  proton_steam.md  qubes_os_installation.md  required_desktop_features.md  switching_from_grub_to_systemd-boot.md  system_requirements.md  tricks.md  troubleshooting.md  ubuntu_changes.md  wifi_hotspot_notes.md  windows_setup.md  xfce_desktop.md
files_to_copy/alien/etc/: mkinitcpio.conf
files_to_copy/bl/etc/: mkinitcpio.conf
files_to_copy/bp/etc/: mkinitcpio.conf
files_to_copy/common/efi/loader/: loader.conf
machine_setup/: __init__.py  __main__.py  config_links.py  constants.py  hosts_config.yml  hosts_configs.yml  links_setup.py  logs.py  machine_info.py  os_configuration.py  packages.py  pamac_override.py  shell.py
machine_setup/os_building/: hosts_configs.yml  make_manjaro_moved_into_luks_bootable.sh  mount_filesystem_for_chroot.sh  mount_manjaro_with_unencrypted_boot_encrypted_root.sh  mount_manjaro_with_unencrypted_boot_encrypted_root_and_btrfs.sh  setup_boot.sh  setup_bp_boot.sh  setup_rpi_manjaro_headless_server.sh
machine_setup/os_building_scripts/: make_manjaro_moved_into_luks_bootable.sh  mount_manjaro_with_unencrypted_boot_encrypted_root.sh  recreate_old_install_partitions_in_luks_and_lvm.sh
main_machine_setup/: __main__.py  packages.py  packages_to_install.txt  packages_to_install_from_AUR.txt  setup_main_machine.py  setup_main_machine.sh
os_building_scripts/: recreate_old_install_partitions_in_luks_and_lvm.sh  setup_rpi_manjaro_headless_server.sh
python_scripts_for_machine/: __init__.py  transferwise_statements.py  work_days_between.py
raspberry_pi/: TODO_raspberry_setup  home_rpi_server_setup.md
raspberry_pi/old_raspberry_ansible/: inventory.yml
raspberry_pi/wifi_dongle_driver_patches/: Makefile  next-steps.txt
raspberry_pi/wifi_dongle_driver_patches/os/linux/: rt_linux.c
roles/big_dev/files/.gnupg/: pubring.gpg  secring.gpg  trustdb.gpg
roles/big_dev/meta/: main.yml
roles/big_dev/tasks/: main.yml
roles/common/tasks/: main.yml
roles/gui_machine/files/: KeePass.config.xml  alacritty.yml
roles/gui_machine/meta/: main.yml
roles/gui_machine/tasks/: main.yml
roles/kubuntu/files/: khotkeysrc
roles/kubuntu/files/konsole/: Linux.colorscheme  konsolerc
roles/kubuntu/meta/: main.yml
roles/kubuntu/tasks/: main.yml
roles/kubuntu/templates/: Butla.profile
roles/main_machine/meta/: main.yml
roles/main_machine/tasks/: main.yml
roles/rpi_backup_server/vars/: main.yml
roles/small_dev/files/: auto-upgrade  id_rsa.pub
roles/small_dev/meta/: main.yml
roles/small_dev/tasks/: main.yml
tests/: test_config_links.py
tests/machine_setup/: test_links_setup.py
tests/machine_setup/shell/: test_ensure_file_contents.py  test_ensure_file_line.py
tests/scripts/: test_transferwise_statements.py  test_work_days_between.py
tests/workstation_setup/: test_config_links.py
wip_scripts/: find_photos_from_one_dir_in_another_dir.py  media_format_names.py  photo_hashes_check.py  renaming_some_files.py
wip_scripts/media_names_format/: media_names_format.py  pyproject.toml
workstation_setup/: __init__.py  __main__.py  alacritty_machine_specific_config.py  config_links.py  packages.py  setup_workstation.py  shell.py
(+12 files in other folders)
