[tool.poetry]
name = "machine_setups"
version = "0.1.0"
description = "Code that sets up my computers with the software and configuration I want."
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length=120

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
isort = "^5.8.0"
pytest = "^6.2.5"
